changed gizmo name

--- a/odl-vocab.html
+++ b/odl-vocab.html
@@ -73,7 +73,7 @@ A webcomponent for highlighting important vocabulary terms.
           'canPosition': false,
           'canEditSource': true,
           'gizmo': {
-            'title': 'Vocab',
+            'title': 'ODL-Vocab',
             'description': 'Vocabulary word',
             'icon': 'image:details',
             'color': 'red',
